web/css/fc_styles.css
/* ... */
.progressFlow .col-md-2.previous span a {
	color:#fff;
}

.progressFlow .col-md-2 .step-num {
	margin:0;
	padding:0 0 0 25px;
}

.col-md-2 span.previous:after {
	content:"\f00c";
	display: inline-block;
	font: normal normal normal normal 14px/1 FontAwesome;
	font-family: FontAwesome;
	font-style:  normal;
	font-weight: normal;
	line-height: 1;
	text-rendering:auto;
	-webkit-font-smoothing: antialiased;
	padding: 3px 3px;
	color:#fff;
	border-radius:40px;
	background-color: green;
	position:absolute;
	left:90%;
	top:11px;
	z-index:2;

}

.col-md-2 span:last-child.current:after {
	display: none;
}

/*NEW PROGRESS STEP STYLES*/

#memberdetails.tab-pane .read-only {
	margin-top: 10px;
}
#memberdetails.tab-pane .read-only .read-only-text {
	float: left;
	width: 100%;
}
#memberdetails.tab-pane .read-only h4 {
	background-color: #fff;
}

#regdetails.tab-pane .read-only {
	margin-top: 10px;
}
#regdetails.tab-pane .read-only .read-only-text {
	float: left;
	width: 100%;
}
#regdetails.tab-pane .read-only h4 {
	background-color: #fff;
}
.transfer-rejected {
	background-color: #c4070a;
    color: #fff;
    font-size: 14px;
    padding: 10px;
    text-align: center;
}

.form-panel-body {
    background: #ededed;
    border: 1px solid #cccccc;
    min-height: 500px;
    /*overflow: hidden;*/
    /*padding: 0;*/ /* reset style coming from bootstrap used only in this stylesheet */
}

